# tinyaes-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: aes.rs  aes_core.rs  lib.rs  padding.rs  parallelism.rs
